[package]
name = "smart-contract"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
cosmwasm-std = { version = "1.0.0-beta8", features = ["staking"] }
cw-storage-plus = "1.2.0"
serde = { version = "1.0.196", features = ["derive"] }
thiserror = "1.0.56"

[dev-dependencies]
cw-multi-test = "0.20.0"

